fixed issues with lists not centering and with long words not wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -10,74 +10,63 @@ body {
 .App {
   text-align: center;
   font-family: 'Source Code Pro', monospace;
+  list-style-type: none;
+  margin: 20px;
 }
 
 ul {
   list-style-type: none;
-  border: 3px solid rgb(8, 54, 95);
   border-radius: 10px;
-  background-color: rgb(12, 88, 155);
   color: white;
-  display: flex;
-  align-content: center;
-  flex-direction: column;
-  line-height: 1.2;
- 
+  background-color: rgb(50, 109, 50);
+  border: 1.5px solid rgb(39, 85, 39);
+  text-align: center;
+  padding: 5px 0px;
+  word-wrap: break-word;
+  line-height: 1.5;
 }
 
 form {
-  margin: 20px;
-  background-color: rgb(50, 109, 50);
+  margin-top: 20px;
   padding: 10px;
-  border: 3px solid rgb(39, 85, 39);
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  line-height:1.5;
 }
 
 .notActive {
   display: none;
 }
 
-.forms {
-  display: flex;
-  flex-direction: column;
-  line-height: 1.5;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
-}
-
 .button {
   width: 100px;
   text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   border-radius: 10px;
   background-color: rgb(3, 111, 3);
   color: white;
+  margin-top: 8px;
 }
 
 .get-FEC {
   text-decoration: none;
-  border: 2px solid rgb(50, 109, 50);
-  background-color: rgb(39, 85, 39);
+  border: 2px solid rgb(48, 48, 48);
+  background-color: rgb(23, 22, 22);
   border-radius: 12px;
-  padding: 5px;
+  padding: 2px 8px;
   color: white;
 }
 
 a {
   text-decoration: none;
-  color:rgb(255, 255, 255)
+  color: rgb(143, 143, 143)
 }
 
 .text-input {
-  border-radius: 8px;
-}
-
-li {
-  list-style-type: none;
-  line-height: 2;
+  border-radius: 10px;
 }
 
 .REP {
@@ -89,11 +78,20 @@ li {
   background-color: rgb(12, 88, 155);
   border: 3px solid rgb(8, 54, 95);
 }
-
+/*
+@media only screen and (min-width: 768px) {
+  .App {
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+  .spend-list {
+    width: 500px;
+  }
+}
 
 @media only screen and (min-width: 1024px) {
-  div {
+  .App {
     margin-left: 80px;
     margin-right: 80px;
   }
-}
+} */
